// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConsolePage renders a warning banner if there is not an authorized user 1`] = `
<div
  className="container half-width-element py-5 align-items-start"
>
  <h1>
    Program Console
  </h1>
  <div
    className="fade alert-content alert alert-warning show"
    role="alert"
  >
    <div
      className="pgn__alert-message-wrapper"
    >
      <div
        className="alert-message-content"
      >
        <p>
          It appears you do not have proper permissions to access this application. Please reach out to 
          <a
            href="mailto:partner-support@edx.org"
          >
            partner-support@edx.org
          </a>
           requesting access to the Registrar service.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`ConsolePage renders an error banner when there was an error loading programs 1`] = `
<div
  className="container half-width-element py-5 align-items-start"
>
  <h1>
    Program Console
  </h1>
  <div
    className="fade alert-content alert alert-danger show"
    role="alert"
  >
    <div
      className="pgn__alert-message-wrapper"
    >
      <div
        className="alert-message-content"
      >
        <div>
          <p>
            An error was encountered while loading your program list: 
            <em>
              Request failed with HTTP 418
            </em>
          </p>
          <p>
            Please try waiting a moment and then refreshing the page. If the issue persists, please reach out to 
            <a
              href="mailto:partner-support@edx.org"
            >
              partner-support@edx.org
            </a>
            .
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ConsolePage renders error when filter returns no programs 1`] = `
<div
  className="container half-width-element py-5 align-items-start"
>
  <h1>
    Program Console
  </h1>
  <div>
    <div
      className="pgn__searchfield d-flex mt-3"
    >
      <form
        className="pgn__searchfield-form"
        onReset={[Function]}
        onSubmit={[Function]}
        role="search"
      >
        <label
          className="m-0"
          htmlFor="pgn-searchfield-input-7"
        >
          <span
            className="sr-only"
          >
            search
          </span>
        </label>
        <input
          className="form-control"
          disabled={false}
          id="pgn-searchfield-input-7"
          name="searchfield-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Filter by Program Title"
          role="searchbox"
          type="text"
          value=""
        />
        <button
          className="btn"
          disabled={false}
          type="submit"
        >
          <span
            className="pgn__icon"
          >
            <svg
              aria-hidden={true}
              fill="none"
              focusable={false}
              height={24}
              role="img"
              viewBox="0 0 24 24"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5Zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <span
            className="sr-only"
          >
            submit search
          </span>
        </button>
      </form>
    </div>
    <div
      className="fade alert-content mt-2 alert alert-danger show"
      data-testid="filter-alert"
      role="alert"
    >
      <div
        className="pgn__alert-message-wrapper"
      >
        <div
          className="alert-message-content"
        >
          <p>
            Invalid program title.
          </p>
        </div>
        <div
          className="pgn__alert-actions pgn__action-row"
        >
          <span
            className="pgn__action-row-spacer"
          />
          <button
            className="btn btn-tertiary btn-sm"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            Dismiss
          </button>
        </div>
      </div>
    </div>
    <nav
      aria-label="pagination navigation"
      className="mt-4 pagination-default"
    >
      <div
        aria-atomic={true}
        aria-live="polite"
        aria-relevant="text"
        className="sr-only"
      >
        Page 1, Current Page, of 1
      </div>
      <ul
        className="pagination"
      >
        <li
          className="page-item disabled"
        >
          <button
            aria-label="Previous"
            className="previous page-link btn btn-primary"
            disabled={true}
            onClick={[Function]}
            tabIndex="-1"
            type="button"
          >
            <div>
              <span
                className="pgn__icon"
              >
                <svg
                  aria-hidden={true}
                  fill="none"
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12l4.58-4.59Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              Previous
            </div>
          </button>
        </li>
        <li
          className="page-item disabled"
        >
          <button
            aria-label="Next"
            className="next page-link btn btn-primary"
            disabled={true}
            onClick={[Function]}
            tabIndex="-1"
            type="button"
          >
            <div>
              Next
              <span
                className="pgn__icon"
              >
                <svg
                  aria-hidden={true}
                  fill="none"
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6-6-6Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </button>
        </li>
      </ul>
    </nav>
    <div
      className="container mb-4"
    >
      <h2>
        a masters
      </h2>
      <div
        className="pgn_collapsible collapsible-card is-open"
      >
        <div
          aria-expanded={true}
          className="collapsible-trigger"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex={0}
        >
          <span>
            Manage Enrollments
          </span>
          <span
            className="collapsible-icon"
          >
            <span
              className="pgn__icon"
            >
              <svg
                aria-hidden={true}
                fill="none"
                focusable={false}
                height={24}
                role="img"
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m12 8-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14l-6-6Z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          className="pgn-transition-replace-group position-relative"
          style={
            Object {
              "height": null,
            }
          }
        >
          <div
            style={
              Object {
                "padding": ".1px 0",
              }
            }
          >
            <div
              className="collapsible-body"
            >
              <div
                className="container p-0"
              >
                <div
                  className="enrollment-row d-flex align-items-stretch flex-wrap mt-2"
                >
                  <div
                    className="col-md mb-2"
                  >
                    <div
                      className="btn btn-outline-primary d-flex justify-content-center align-items-center h-100 w-100"
                    >
                      <input
                        className="sr input-overlay-hack"
                        onChange={[Function]}
                        type="file"
                      />
                      Upload Program Enrollments
                    </div>
                  </div>
                  <div
                    className="col-md mb-2"
                  >
                    <button
                      className="btn btn-outline-primary d-flex justify-content-center align-items-center h-100 w-100"
                      onClick={[Function]}
                      type="button"
                    >
                      Download Program Enrollments
                    </button>
                  </div>
                </div>
                <div
                  className="enrollment-row d-flex align-items-stretch flex-wrap"
                >
                  <div
                    className="col-md mb-2"
                  >
                    <div
                      className="btn btn-outline-primary d-flex justify-content-center align-items-center h-100 w-100"
                    >
                      <input
                        className="sr input-overlay-hack"
                        onChange={[Function]}
                        type="file"
                      />
                      Upload Course Enrollments
                    </div>
                  </div>
                  <div
                    className="col-md mb-2"
                  >
                    <button
                      className="btn btn-outline-primary d-flex justify-content-center align-items-center h-100 w-100"
                      onClick={[Function]}
                      type="button"
                    >
                      Download Course Enrollments
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="container mb-4"
    >
      <h2>
        b masters
      </h2>
      <div
        className="pgn_collapsible collapsible-card is-open"
      >
        <div
          aria-expanded={true}
          className="collapsible-trigger"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex={0}
        >
          <span>
            Manage Enrollments
          </span>
          <span
            className="collapsible-icon"
          >
            <span
              className="pgn__icon"
            >
              <svg
                aria-hidden={true}
                fill="none"
                focusable={false}
                height={24}
                role="img"
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m12 8-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14l-6-6Z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          className="pgn-transition-replace-group position-relative"
          style={
            Object {
              "height": null,
            }
          }
        >
          <div
            style={
              Object {
                "padding": ".1px 0",
              }
            }
          >
            <div
              className="collapsible-body"
            >
              <div
                className="container p-0"
              >
                <div
                  className="enrollment-row d-flex align-items-stretch flex-wrap mt-2"
                >
                  <div
                    className="col-md mb-2"
                  >
                    <div
                      className="btn btn-outline-primary d-flex justify-content-center align-items-center h-100 w-100"
                    >
                      <input
                        className="sr input-overlay-hack"
                        onChange={[Function]}
                        type="file"
                      />
                      Upload Program Enrollments
                    </div>
                  </div>
                  <div
                    className="col-md mb-2"
                  >
                    <button
                      className="btn btn-outline-primary d-flex justify-content-center align-items-center h-100 w-100"
                      onClick={[Function]}
                      type="button"
                    >
                      Download Program Enrollments
                    </button>
                  </div>
                </div>
                <div
                  className="enrollment-row d-flex align-items-stretch flex-wrap"
                >
                  <div
                    className="col-md mb-2"
                  >
                    <div
                      className="btn btn-outline-primary d-flex justify-content-center align-items-center h-100 w-100"
                    >
                      <input
                        className="sr input-overlay-hack"
                        onChange={[Function]}
                        type="file"
                      />
                      Upload Course Enrollments
                    </div>
                  </div>
                  <div
                    className="col-md mb-2"
                  >
                    <button
                      className="btn btn-outline-primary d-flex justify-content-center align-items-center h-100 w-100"
                      onClick={[Function]}
                      type="button"
                    >
                      Download Course Enrollments
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <nav
      aria-label="pagination navigation"
      className="pagination-default"
    >
      <div
        aria-atomic={true}
        aria-live="polite"
        aria-relevant="text"
        className="sr-only"
      >
        Page 1, Current Page, of 1
      </div>
      <ul
        className="pagination"
      >
        <li
          className="page-item disabled"
        >
          <button
            aria-label="Previous"
            className="previous page-link btn btn-primary"
            disabled={true}
            onClick={[Function]}
            tabIndex="-1"
            type="button"
          >
            <div>
              <span
                className="pgn__icon"
              >
                <svg
                  aria-hidden={true}
                  fill="none"
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12l4.58-4.59Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              Previous
            </div>
          </button>
        </li>
        <li
          className="page-item disabled"
        >
          <button
            aria-label="Next"
            className="next page-link btn btn-primary"
            disabled={true}
            onClick={[Function]}
            tabIndex="-1"
            type="button"
          >
            <div>
              Next
              <span
                className="pgn__icon"
              >
                <svg
                  aria-hidden={true}
                  fill="none"
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6-6-6Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </button>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`ConsolePage renders program banners when they are included 1`] = `
<div
  className="container half-width-element py-5 align-items-start"
>
  <h1>
    Program Console
  </h1>
  <div>
    <div
      className="pgn__searchfield d-flex mt-3"
    >
      <form
        className="pgn__searchfield-form"
        onReset={[Function]}
        onSubmit={[Function]}
        role="search"
      >
        <label
          className="m-0"
          htmlFor="pgn-searchfield-input-4"
        >
          <span
            className="sr-only"
          >
            search
          </span>
        </label>
        <input
          className="form-control"
          disabled={false}
          id="pgn-searchfield-input-4"
          name="searchfield-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Filter by Program Title"
          role="searchbox"
          type="text"
          value=""
        />
        <button
          className="btn"
          disabled={false}
          type="submit"
        >
          <span
            className="pgn__icon"
          >
            <svg
              aria-hidden={true}
              fill="none"
              focusable={false}
              height={24}
              role="img"
              viewBox="0 0 24 24"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5Zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <span
            className="sr-only"
          >
            submit search
          </span>
        </button>
      </form>
    </div>
    <nav
      aria-label="pagination navigation"
      className="mt-4 pagination-default"
    >
      <div
        aria-atomic={true}
        aria-live="polite"
        aria-relevant="text"
        className="sr-only"
      >
        Page 1, Current Page, of 1
      </div>
      <ul
        className="pagination"
      >
        <li
          className="page-item disabled"
        >
          <button
            aria-label="Previous"
            className="previous page-link btn btn-primary"
            disabled={true}
            onClick={[Function]}
            tabIndex="-1"
            type="button"
          >
            <div>
              <span
                className="pgn__icon"
              >
                <svg
                  aria-hidden={true}
                  fill="none"
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12l4.58-4.59Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              Previous
            </div>
          </button>
        </li>
        <li
          className="page-item disabled"
        >
          <button
            aria-label="Next"
            className="next page-link btn btn-primary"
            disabled={true}
            onClick={[Function]}
            tabIndex="-1"
            type="button"
          >
            <div>
              Next
              <span
                className="pgn__icon"
              >
                <svg
                  aria-hidden={true}
                  fill="none"
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6-6-6Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </button>
        </li>
      </ul>
    </nav>
    <div
      className="container mb-4"
    >
      <h2>
        a masters
      </h2>
      <div
        className="fade alert-content alert alert-danger show"
        role="alert"
      >
        <div
          className="pgn__alert-message-wrapper"
        >
          <div
            className="alert-message-content"
          >
            <div
              className="modal-alert"
            >
              Sorry something went wrong 
            </div>
          </div>
          <div
            className="pgn__alert-actions pgn__action-row"
          >
            <span
              className="pgn__action-row-spacer"
            />
            <button
              className="btn btn-tertiary btn-sm"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Dismiss
            </button>
          </div>
        </div>
      </div>
      <div
        className="pgn_collapsible collapsible-card is-open"
      >
        <div
          aria-expanded={true}
          className="collapsible-trigger"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex={0}
        >
          <span>
            Manage Enrollments
          </span>
          <span
            className="collapsible-icon"
          >
            <span
              className="pgn__icon"
            >
              <svg
                aria-hidden={true}
                fill="none"
                focusable={false}
                height={24}
                role="img"
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m12 8-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14l-6-6Z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          className="pgn-transition-replace-group position-relative"
          style={
            Object {
              "height": null,
            }
          }
        >
          <div
            style={
              Object {
                "padding": ".1px 0",
              }
            }
          >
            <div
              className="collapsible-body"
            >
              <div
                className="container p-0"
              >
                <div
                  className="enrollment-row d-flex align-items-stretch flex-wrap mt-2"
                >
                  <div
                    className="col-md mb-2"
                  >
                    <div
                      className="btn btn-outline-primary d-flex justify-content-center align-items-center h-100 w-100"
                    >
                      <input
                        className="sr input-overlay-hack"
                        onChange={[Function]}
                        type="file"
                      />
                      Upload Program Enrollments
                    </div>
                  </div>
                  <div
                    className="col-md mb-2"
                  >
                    <button
                      className="btn btn-outline-primary d-flex justify-content-center align-items-center h-100 w-100"
                      onClick={[Function]}
                      type="button"
                    >
                      Download Program Enrollments
                    </button>
                  </div>
                </div>
                <div
                  className="enrollment-row d-flex align-items-stretch flex-wrap"
                >
                  <div
                    className="col-md mb-2"
                  >
                    <div
                      className="btn btn-outline-primary d-flex justify-content-center align-items-center h-100 w-100"
                    >
                      <input
                        className="sr input-overlay-hack"
                        onChange={[Function]}
                        type="file"
                      />
                      Upload Course Enrollments
                    </div>
                  </div>
                  <div
                    className="col-md mb-2"
                  >
                    <button
                      className="btn btn-outline-primary d-flex justify-content-center align-items-center h-100 w-100"
                      onClick={[Function]}
                      type="button"
                    >
                      Download Course Enrollments
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="container mb-4"
    >
      <h2>
        b masters
      </h2>
      <div
        className="fade alert-content alert alert-success show"
        role="alert"
      >
        <div
          className="pgn__alert-message-wrapper"
        >
          <div
            className="alert-message-content"
          >
            <div
              className="modal-alert"
            >
              You did it! 
            </div>
          </div>
          <div
            className="pgn__alert-actions pgn__action-row"
          >
            <span
              className="pgn__action-row-spacer"
            />
            <button
              className="btn btn-tertiary btn-sm"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Dismiss
            </button>
          </div>
        </div>
      </div>
      <div
        className="pgn_collapsible collapsible-card is-open"
      >
        <div
          aria-expanded={true}
          className="collapsible-trigger"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex={0}
        >
          <span>
            Manage Enrollments
          </span>
          <span
            className="collapsible-icon"
          >
            <span
              className="pgn__icon"
            >
              <svg
                aria-hidden={true}
                fill="none"
                focusable={false}
                height={24}
                role="img"
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m12 8-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14l-6-6Z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          className="pgn-transition-replace-group position-relative"
          style={
            Object {
              "height": null,
            }
          }
        >
          <div
            style={
              Object {
                "padding": ".1px 0",
              }
            }
          >
            <div
              className="collapsible-body"
            >
              <div
                className="container p-0"
              >
                <div
                  className="enrollment-row d-flex align-items-stretch flex-wrap mt-2"
                >
                  <div
                    className="col-md mb-2"
                  >
                    <div
                      className="btn btn-outline-primary d-flex justify-content-center align-items-center h-100 w-100"
                    >
                      <input
                        className="sr input-overlay-hack"
                        onChange={[Function]}
                        type="file"
                      />
                      Upload Program Enrollments
                    </div>
                  </div>
                  <div
                    className="col-md mb-2"
                  >
                    <button
                      className="btn btn-outline-primary d-flex justify-content-center align-items-center h-100 w-100"
                      onClick={[Function]}
                      type="button"
                    >
                      Download Program Enrollments
                    </button>
                  </div>
                </div>
                <div
                  className="enrollment-row d-flex align-items-stretch flex-wrap"
                >
                  <div
                    className="col-md mb-2"
                  >
                    <div
                      className="btn btn-outline-primary d-flex justify-content-center align-items-center h-100 w-100"
                    >
                      <input
                        className="sr input-overlay-hack"
                        onChange={[Function]}
                        type="file"
                      />
                      Upload Course Enrollments
                    </div>
                  </div>
                  <div
                    className="col-md mb-2"
                  >
                    <button
                      className="btn btn-outline-primary d-flex justify-content-center align-items-center h-100 w-100"
                      onClick={[Function]}
                      type="button"
                    >
                      Download Course Enrollments
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <nav
      aria-label="pagination navigation"
      className="pagination-default"
    >
      <div
        aria-atomic={true}
        aria-live="polite"
        aria-relevant="text"
        className="sr-only"
      >
        Page 1, Current Page, of 1
      </div>
      <ul
        className="pagination"
      >
        <li
          className="page-item disabled"
        >
          <button
            aria-label="Previous"
            className="previous page-link btn btn-primary"
            disabled={true}
            onClick={[Function]}
            tabIndex="-1"
            type="button"
          >
            <div>
              <span
                className="pgn__icon"
              >
                <svg
                  aria-hidden={true}
                  fill="none"
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12l4.58-4.59Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              Previous
            </div>
          </button>
        </li>
        <li
          className="page-item disabled"
        >
          <button
            aria-label="Next"
            className="next page-link btn btn-primary"
            disabled={true}
            onClick={[Function]}
            tabIndex="-1"
            type="button"
          >
            <div>
              Next
              <span
                className="pgn__icon"
              >
                <svg
                  aria-hidden={true}
                  fill="none"
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6-6-6Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </button>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`ConsolePage renders programs when there is data passed in 1`] = `
<div
  className="container half-width-element py-5 align-items-start"
>
  <h1>
    Program Console
  </h1>
  <div>
    <div
      className="pgn__searchfield d-flex mt-3"
    >
      <form
        className="pgn__searchfield-form"
        onReset={[Function]}
        onSubmit={[Function]}
        role="search"
      >
        <label
          className="m-0"
          htmlFor="pgn-searchfield-input-2"
        >
          <span
            className="sr-only"
          >
            search
          </span>
        </label>
        <input
          className="form-control"
          disabled={false}
          id="pgn-searchfield-input-2"
          name="searchfield-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Filter by Program Title"
          role="searchbox"
          type="text"
          value=""
        />
        <button
          className="btn"
          disabled={false}
          type="submit"
        >
          <span
            className="pgn__icon"
          >
            <svg
              aria-hidden={true}
              fill="none"
              focusable={false}
              height={24}
              role="img"
              viewBox="0 0 24 24"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5Zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <span
            className="sr-only"
          >
            submit search
          </span>
        </button>
      </form>
    </div>
    <nav
      aria-label="pagination navigation"
      className="mt-4 pagination-default"
    >
      <div
        aria-atomic={true}
        aria-live="polite"
        aria-relevant="text"
        className="sr-only"
      >
        Page 1, Current Page, of 1
      </div>
      <ul
        className="pagination"
      >
        <li
          className="page-item disabled"
        >
          <button
            aria-label="Previous"
            className="previous page-link btn btn-primary"
            disabled={true}
            onClick={[Function]}
            tabIndex="-1"
            type="button"
          >
            <div>
              <span
                className="pgn__icon"
              >
                <svg
                  aria-hidden={true}
                  fill="none"
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12l4.58-4.59Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              Previous
            </div>
          </button>
        </li>
        <li
          className="page-item disabled"
        >
          <button
            aria-label="Next"
            className="next page-link btn btn-primary"
            disabled={true}
            onClick={[Function]}
            tabIndex="-1"
            type="button"
          >
            <div>
              Next
              <span
                className="pgn__icon"
              >
                <svg
                  aria-hidden={true}
                  fill="none"
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6-6-6Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </button>
        </li>
      </ul>
    </nav>
    <div
      className="container mb-4"
    >
      <h2>
        a masters
      </h2>
      <div
        className="pgn_collapsible collapsible-card is-open"
      >
        <div
          aria-expanded={true}
          className="collapsible-trigger"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex={0}
        >
          <span>
            Manage Enrollments
          </span>
          <span
            className="collapsible-icon"
          >
            <span
              className="pgn__icon"
            >
              <svg
                aria-hidden={true}
                fill="none"
                focusable={false}
                height={24}
                role="img"
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m12 8-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14l-6-6Z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          className="pgn-transition-replace-group position-relative"
          style={
            Object {
              "height": null,
            }
          }
        >
          <div
            style={
              Object {
                "padding": ".1px 0",
              }
            }
          >
            <div
              className="collapsible-body"
            >
              <div
                className="container p-0"
              >
                <div
                  className="enrollment-row d-flex align-items-stretch flex-wrap mt-2"
                >
                  <div
                    className="col-md mb-2"
                  >
                    <div
                      className="btn btn-outline-primary d-flex justify-content-center align-items-center h-100 w-100"
                    >
                      <input
                        className="sr input-overlay-hack"
                        onChange={[Function]}
                        type="file"
                      />
                      Upload Program Enrollments
                    </div>
                  </div>
                  <div
                    className="col-md mb-2"
                  >
                    <button
                      className="btn btn-outline-primary d-flex justify-content-center align-items-center h-100 w-100"
                      onClick={[Function]}
                      type="button"
                    >
                      Download Program Enrollments
                    </button>
                  </div>
                </div>
                <div
                  className="enrollment-row d-flex align-items-stretch flex-wrap"
                >
                  <div
                    className="col-md mb-2"
                  >
                    <div
                      className="btn btn-outline-primary d-flex justify-content-center align-items-center h-100 w-100"
                    >
                      <input
                        className="sr input-overlay-hack"
                        onChange={[Function]}
                        type="file"
                      />
                      Upload Course Enrollments
                    </div>
                  </div>
                  <div
                    className="col-md mb-2"
                  >
                    <button
                      className="btn btn-outline-primary d-flex justify-content-center align-items-center h-100 w-100"
                      onClick={[Function]}
                      type="button"
                    >
                      Download Course Enrollments
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="container mb-4"
    >
      <h2>
        b masters
      </h2>
      <div
        className="pgn_collapsible collapsible-card is-open"
      >
        <div
          aria-expanded={true}
          className="collapsible-trigger"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex={0}
        >
          <span>
            Manage Enrollments
          </span>
          <span
            className="collapsible-icon"
          >
            <span
              className="pgn__icon"
            >
              <svg
                aria-hidden={true}
                fill="none"
                focusable={false}
                height={24}
                role="img"
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m12 8-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14l-6-6Z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          className="pgn-transition-replace-group position-relative"
          style={
            Object {
              "height": null,
            }
          }
        >
          <div
            style={
              Object {
                "padding": ".1px 0",
              }
            }
          >
            <div
              className="collapsible-body"
            >
              <div
                className="container p-0"
              >
                <div
                  className="enrollment-row d-flex align-items-stretch flex-wrap mt-2"
                >
                  <div
                    className="col-md mb-2"
                  >
                    <div
                      className="btn btn-outline-primary d-flex justify-content-center align-items-center h-100 w-100"
                    >
                      <input
                        className="sr input-overlay-hack"
                        onChange={[Function]}
                        type="file"
                      />
                      Upload Program Enrollments
                    </div>
                  </div>
                  <div
                    className="col-md mb-2"
                  >
                    <button
                      className="btn btn-outline-primary d-flex justify-content-center align-items-center h-100 w-100"
                      onClick={[Function]}
                      type="button"
                    >
                      Download Program Enrollments
                    </button>
                  </div>
                </div>
                <div
                  className="enrollment-row d-flex align-items-stretch flex-wrap"
                >
                  <div
                    className="col-md mb-2"
                  >
                    <div
                      className="btn btn-outline-primary d-flex justify-content-center align-items-center h-100 w-100"
                    >
                      <input
                        className="sr input-overlay-hack"
                        onChange={[Function]}
                        type="file"
                      />
                      Upload Course Enrollments
                    </div>
                  </div>
                  <div
                    className="col-md mb-2"
                  >
                    <button
                      className="btn btn-outline-primary d-flex justify-content-center align-items-center h-100 w-100"
                      onClick={[Function]}
                      type="button"
                    >
                      Download Course Enrollments
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <nav
      aria-label="pagination navigation"
      className="pagination-default"
    >
      <div
        aria-atomic={true}
        aria-live="polite"
        aria-relevant="text"
        className="sr-only"
      >
        Page 1, Current Page, of 1
      </div>
      <ul
        className="pagination"
      >
        <li
          className="page-item disabled"
        >
          <button
            aria-label="Previous"
            className="previous page-link btn btn-primary"
            disabled={true}
            onClick={[Function]}
            tabIndex="-1"
            type="button"
          >
            <div>
              <span
                className="pgn__icon"
              >
                <svg
                  aria-hidden={true}
                  fill="none"
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12l4.58-4.59Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              Previous
            </div>
          </button>
        </li>
        <li
          className="page-item disabled"
        >
          <button
            aria-label="Next"
            className="next page-link btn btn-primary"
            disabled={true}
            onClick={[Function]}
            tabIndex="-1"
            type="button"
          >
            <div>
              Next
              <span
                className="pgn__icon"
              >
                <svg
                  aria-hidden={true}
                  fill="none"
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6-6-6Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </button>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`ConsolePage renders with the most basic props passed to it 1`] = `
<div
  className="container half-width-element py-5 align-items-start"
>
  <h1>
    Program Console
  </h1>
</div>
`;
